fixes bug where header gets thrown off by scrolling down outside of the table by changing body overflow to hidden

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,18 +75,20 @@ table {
  }
  .body{
    margin: 0;
+   overflow: hidden;
  }
 
 
  .leftPanel{
    flex: 1;
    width: 220px;
-   height: calc(100%-70);
+   height: calc(100% - 70px);
    background-color: lightgrey;
  }
 
 
 .container{
+  height: 100%;
   display: flex;
   margin: 0;
 }
